<resources>
    <string name="app_name">ZOCO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ZOCO</string>
    <string name="nav_header_subtitle">Tu mercado favorito</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_index">Inicio</string>
    <string name="menu_category">Categorias</string>
    <string name="menu_my_products">Mis productos</string>
    <string name="menu_notifications">Notificaciones</string>
    <string name="menu_about_zoco">Acerca de zoco</string>
    <string name="menu_settings">Configuraciones</string>

    <string name="tab_all_products">Todos</string>
    <string name="tab_academics">Académicos</string>
    <string name="tab_foods">Comestibles</string>
    <string name="tab_services">Servicios</string>
    <string name="tab_discounts">Promociones</string>
    <string name="tab_article">Mis artículos</string>
    <string name="tab_store">Mis negocios</string>


    <string name="hint_name">Nombre</string>
    <string name="hint_last_name">Apellidos</string>
    <string name="hint_email">Correo electrónico Institucional</string>
    <string name="hint_phone">Celular</string>
    <string name="hint_passwd">Contraseña</string>
    <string name="hint_repasswd">Repetir contraseña</string>
    <string name="hint_name_product">Nombre del producto</string>
    <string name="hint_price_product">Precio del producto</string>
    <string name="hint_description_product">Descripción del producto</string>
    <string name="hint_name_store">Nombre del negocio</string>
    <string name="hint_description_store">Descripción del negocio</string>
    <string name="hint_location_store">Ubicación :</string>
    <string name="hint_category">Categorias</string>
    <string name="hint_store">Mis negocios</string>
    <string name="hint_name_category">Nombre de la categoría</string>
    <string name="hint_description_category">Descripción de la categoría</string>
    <string name="hint_date">Fecha</string>
    <string name="hint_number_of_articles">Cantidad de producto</string>
    <string name="hint_msg_request_product">Escribir al vendedor</string>
    <string name="hint_name_seller">Nombre del vendedor</string>
    <string name="hint_phone_seller">Telefono del vendedor</string>
    <string name="hint_amount_article">Cantidad solicitada</string>
    <string name="hint_total">monto total</string>

    <string name="chip_mode_light">Modo claro</string>
    <string name="chip_mode_night">Modo oscuro</string>
    <string name="chip_language_spanish">Español</string>
    <string name="chip_language_english">English</string>
    <string name="chip_state_product_publish">Público</string>
    <string name="chip_state_product_no_publish">Oculto</string>
    <string name="chip_state_store_visibility">Visible</string>
    <string name="chip_state_store_hide">Ocultar</string>

    <string name="button_save">Guardar</string>
    <string name="button_send">Enviar</string>
    <string name="button_add">Agregar</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="button_signup">Registarse</string>
    <string name="button_new_article">Agregar un artículo</string>
    <string name="button_new_store">Agregar un negocio</string>
    <string name="button_request_article">Solicitar producto</string>
    <string name="button_save_change">Guardar cambios</string>

    <string name="title_login_fragment">INICIAR SESIÓN</string>
    <string name="title_signup_fragment">REGISTRARSE</string>

    <string name="register_new_article">Agregar un producto</string>
    <string name="register_new_store">Agregar un negocio</string>
    <string name="register_new_category_fragment">Agregar categoría</string>

    <string name="text_forgot_password"><u>Recuperar contraseña</u></string>
    <string name="text_change_passwd"><u>Cambiar contraseña</u></string>
    <string name="text_wellcome_msg">Bienvenido a ZOCO</string>
    <string name="text_ask_aunt">¿No tienes cuenta?</string>
    <string name="text_signup_here"><u>Registrate aquí</u></string>
    <string name="text_email_domain"><u>@udea.edu.co</u></string>
    <string name="text_price_detail">Precio: $</string>
    <string name="text_category_detail">Categoría: </string>
    <string name="text_store_detail">Tienda: </string>
    <string name="text_total">Total: $</string>
    <string name="text_seller">Vendedor: </string>
    <string name="text_phone_seller">Cel:</string>
    <string name="text_amount_article">Cantidad: </string>

    <string name="todo">TODO</string>
    <string name="menu_search">Buscar</string>
    <string name="menu_signOut">Cerrar sesión</string>
    <string name="menu_log_out">Cerrar sesión</string>
    <string name="details_article">Detalle del producto</string>
    <string name="nav_trolley_fragment">Realizar pedido</string>
    <string name="nav_detail_notification">Detalle de la notificación</string>
    <string name="hint_msg">Mensaje</string>
    <string name="nav_detail_my_article">Detalle del producto</string>
    <string name="fab_edit">Editar</string>
    <string name="fab_trash">Borrar</string>
    <string name="nav_detail_store">"Detalle de negocio "</string>
    <string name="text_amount_category">Publicados:</string>


    <string-array name="array_categories">
        <item>Categorias</item>
        <item>Académicos</item>
        <item>Alimentos</item>
        <item>Servicios</item>
    </string-array>
    <string-array name="array_stores">
        <item>...</item>
        <item>sin tienda</item>
    </string-array>
</resources>