<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.details.detailsArticle.DetailsArticleFragment">

        <ImageView
            android:id="@+id/picture_details_image_view"
            android:layout_width="358dp"
            android:layout_height="282dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/burger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_article_details_text_view"
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:text="@string/hint_name_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picture_details_image_view" />

        <TextView
            android:id="@+id/price_detail_text_view"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_price_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_article_details_text_view" />

        <TextView
            android:id="@+id/price_article_details_text_view"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/hint_price_product"
            app:layout_constraintBottom_toBottomOf="@+id/price_detail_text_view"
            app:layout_constraintStart_toEndOf="@+id/price_detail_text_view"
            app:layout_constraintTop_toTopOf="@+id/price_detail_text_view" />

        <TextView
            android:id="@+id/category_detail_text_view"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_category_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_detail_text_view" />

        <TextView
            android:id="@+id/category_article_details_text_view"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/hint_category"
            app:layout_constraintBottom_toBottomOf="@+id/category_detail_text_view"
            app:layout_constraintStart_toEndOf="@+id/category_detail_text_view"
            app:layout_constraintTop_toTopOf="@+id/category_detail_text_view" />

        <TextView
            android:id="@+id/store_detail_text_view"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_store_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_detail_text_view" />

        <TextView
            android:id="@+id/store_article_details_text_view"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/hint_name_store"
            app:layout_constraintBottom_toBottomOf="@+id/store_detail_text_view"
            app:layout_constraintStart_toEndOf="@+id/store_detail_text_view"
            app:layout_constraintTop_toTopOf="@+id/store_detail_text_view" />

        <TextView
            android:id="@+id/description_article_details_text_view"
            style="@style/p3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/hint_description_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phon_seller_text_view" />

        <Button
            android:id="@+id/request_article_details_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/button_request_article"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_article_details_text_view" />

        <TextView
            android:id="@+id/seller_text_view"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_seller"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/store_detail_text_view" />

        <TextView
            android:id="@+id/name_seller_text_view"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/hint_name_seller"
            app:layout_constraintBottom_toBottomOf="@+id/seller_text_view"
            app:layout_constraintStart_toEndOf="@+id/seller_text_view"
            app:layout_constraintTop_toTopOf="@+id/seller_text_view" />

        <TextView
            android:id="@+id/phone_text_view"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_phone_seller"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seller_text_view" />

        <TextView
            android:id="@+id/phon_seller_text_view"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/hint_phone_seller"
            app:layout_constraintBottom_toBottomOf="@+id/phone_text_view"
            app:layout_constraintStart_toEndOf="@+id/phone_text_view"
            app:layout_constraintTop_toTopOf="@+id/phone_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>