<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/product_card_view"
        android:layout_width="match_parent"
        android:layout_height="384dp"
        android:background="@color/focusable_color"
        android:backgroundTint="@color/focusable_color"
        android:padding="16dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ic_launcher_background"
            android:padding="8dp">

            <ImageView
                android:id="@+id/picture_detail_product_image_view"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/material_dynamic_neutral90"
                android:backgroundTint="@color/material_dynamic_neutral90"
                android:contentDescription="@string/todo"
                android:src="@drawable/burger"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_detail_product_text_view"
                style="@style/h2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/hint_name_product"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/picture_detail_product_image_view" />

            <TextView
                android:id="@+id/price_detail_article_text_view"
                style="@style/h4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_price_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_detail_product_text_view" />

            <TextView
                android:id="@+id/price_detail_product_text_view"
                style="@style/h4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/hint_price_product"
                app:layout_constraintBottom_toBottomOf="@+id/price_detail_article_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/price_detail_article_text_view"
                app:layout_constraintTop_toTopOf="@+id/price_detail_article_text_view" />

            <TextView
                android:id="@+id/amount_detail_text_view"
                style="@style/h4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_amount_article"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price_detail_article_text_view" />

            <TextView
                android:id="@+id/amount_detail_product_text_view"
                style="@style/h4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/hint_amount_article"
                app:layout_constraintBottom_toBottomOf="@+id/amount_detail_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/amount_detail_text_view"
                app:layout_constraintTop_toTopOf="@+id/amount_detail_text_view" />

            <TextView
                android:id="@+id/total_detail_text_view"
                style="@style/h3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_total"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amount_detail_text_view" />

            <TextView
                android:id="@+id/total_detail_product_text_view"
                style="@style/h3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/hint_total"
                app:layout_constraintBottom_toBottomOf="@+id/total_detail_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/total_detail_text_view"
                app:layout_constraintTop_toTopOf="@+id/total_detail_text_view" />

            <TextView
                android:id="@+id/date_detail_product_text_view"
                style="@style/p1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/hint_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/total_detail_product_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>